@startuml

title __INTERNAL's Class Diagram__\n

  namespace  {
    namespace portstable.json {
      namespace internal {
        class sportstable.json.internal.TableDeserializer {
            + deserialize()
            ~ deserialize()
        }
      }
    }
  }
  

  namespace  {
    namespace portstable.json {
      namespace internal {
        class sportstable.json.internal.TableModule {
            {static} - NAME : String
            + TableModule()
        }
      }
    }
  }
  

  namespace  {
    namespace portstable.json {
      namespace internal {
        class sportstable.json.internal.TableSerializer {
            + serialize()
        }
      }
    }
  }
  

  sportstable.json.internal.TableDeserializer -up-|> com.fasterxml.jackson.databind.JsonDeserializer
  sportstable.json.internal.TableModule -up-|> com.fasterxml.jackson.databind.module.SimpleModule
  sportstable.json.internal.TableSerializer -up-|> com.fasterxml.jackson.databind.JsonSerializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
